[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = "0.4.23"
config = "0.13.2"
reqwest = "0.11.13"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = {version = "0.6.2", default-features=false, features=["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tokio = {version = "1.22.0", features=["full"]}
uuid = {version = "1.2.2", features=["v4"]}


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
